[package]
name = "bangumi-proxy"
version = "0.4.0"
edition = "2021"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
foreign-types-shared = "0.1"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
which = "7"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
base64 = "0.22"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
